Optimize ODB with Singleton Downloader and Dynamic Sniffing
- Implemented Singleton pattern in Downloader to fix thread/socket leaks.
- Added dynamic ODB activation via header sniffing in MyInputStream and MyOutputStream.
- Reduced virtualization threshold to 10KB to ensure images are virtualized.
- Added X-ODB header injection in MyHttpServletResponse for propagation.
- Updated Parser6 to support refined stream constructors.
- Added system property support for MySocket ODB activation.
- Verified 3-tier architecture with descriptor forwarding and lazy rapatriation.

Co-authored-by: vignol <89270861+vignol@users.noreply.github.com>